# pse-ecosystem

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/: economics.json
docs/: ARCHITECTURE.md  AUDIT_v1_6.md  DEVELOPER_GUIDE.md  PLAN_v1_6_1.md  PLAN_v1_7.md  SHOWCASE_WALKTHROUGH.md  SYSTEM_STATE.md  THEORY_REFERENCE.md  TUTORIAL_WALKTHROUGH.md  UI_GUIDE.md  UI_USER_GUIDE.md  USER_MANUAL.md  WORKSHOP_7UNIT.md
examples/: electrolysis_v0.py  hda_case_study.py
pse_ecosystem/: __init__.py
pse_ecosystem/core/: __init__.py  contracts.py  registry.py
pse_ecosystem/data/: __init__.py  economics.json  weather.py
pse_ecosystem/dynamics/: __init__.py  dae_solver.py  perturbation.py
pse_ecosystem/flowsheets/: __init__.py  base_flowsheet.py
pse_ecosystem/flowsheets/case_studies/: __init__.py
pse_ecosystem/flowsheets/hydrogen/: electrolysis_grid.py
pse_ecosystem/flowsheets/industrial/: __init__.py  gasification_to_power.py  green_hydrogen.py  power_to_methanol.py  syngas_production.py
pse_ecosystem/flowsheets/small/: __init__.py  adiabatic_cstr_flash.py  compression_train.py  distillation_column.py  mixer_settler.py
pse_ecosystem/models/: __init__.py  base_unit.py
pse_ecosystem/models/_blackbox/: __init__.py  hda_distillation_bb.py  hda_flash_bb.py  hda_reactor_bb.py
pse_ecosystem/models/biomass/: __init__.py  biomass_database.py  biomass_gasifier.py  biomass_storage.py  h2_separator.py  wgs_reactor.py
pse_ecosystem/models/costing/: __init__.py  economic_engine.py  sslw_costing.py
pse_ecosystem/models/dac/: electrolyser_hf.py  methanation_reactor.py  tvsa_contactor.py
pse_ecosystem/models/distillation/: __init__.py  hda_column.py
pse_ecosystem/models/electrolysis/: pem_toy.py
pse_ecosystem/models/gasification/: gasifier_toy.py
pse_ecosystem/models/heat_exchanger/: __init__.py  boiler_toy.py  heat_exchanger_toy.py
pse_ecosystem/models/heat_exchangers/: cooler_hf.py  fired_heater.py  heat_exchanger_1d.py  heat_exchanger_ntu.py  shell_tube.py
pse_ecosystem/models/mixer/: __init__.py  ideal_mixer.py
pse_ecosystem/models/mixers/: mixer_hf.py
pse_ecosystem/models/power/: chp_unit.py
pse_ecosystem/models/pressure_changers/: compressor.py  expander.py  multistage_compressor.py  pump.py  valve.py
pse_ecosystem/models/properties/: __init__.py  activity_models.py  components.py  cubic_eos.py  flash.py  ideal_gas.py  property_package.py  vle.py
pse_ecosystem/models/reactor/: __init__.py  cstr_toy.py  hda_pfr.py
pse_ecosystem/models/reactors/: batch_reactor.py  cstr_hf.py  equilibrium_reactor.py  gibbs_reactor.py  pfr_hf.py  stoichiometric_reactor.py
pse_ecosystem/models/safety/: __init__.py  safety_checks.py
pse_ecosystem/models/separator/: __init__.py  flash_toy.py  hda_flash.py
pse_ecosystem/models/separators/: crystallizer.py  decanter.py  distillation_hf.py  flash_sl.py  flash_vl_hf.py  membrane_module.py  packed_column.py  separator_hf.py  tray_column.py
pse_ecosystem/models/utilities/: __init__.py  (+1 more)
pse_ecosystem/safety/: __init__.py  depressuring.py  hazop_nodes.py  relief_sizing.py
pse_ecosystem/solvers/: __init__.py  ipopt_driver.py  lp_builder.py  milp_builder.py  nlp_builder.py  orchestrator.py  scaling.py  slp.py  trust_region_driver.py
pse_ecosystem/themes/: __init__.py  hydrogen.py
pse_ecosystem/ui/: __init__.py  __main__.py  app_streamlit.py  catalogue.py  economics_bridge.py  entry.py  flowsheet_service.py  instantiate.py  investor_report.py  port_resolver.py  safety_bridge.py  sensitivity_analysis.py  templates.py  unit_specs.py
pse_ecosystem/validation/: __init__.py  aspen_importer.py  csv_io.py  kinetic_tuner.py  parity.py
scripts/: package_app.py
tests/: _jacobian_parity.py  biomass_audit.py  flowsheet_optimization_test.py  industrial_audit.py  presentation_validation.py  system_audit.py  test_activity_models.py  test_analytical_jacobians.py  test_audit_scripts.py  test_audit_v161_fixes.py  test_base_unit.py  test_biomass_audit.py  test_biomass_dac_power_audit.py  test_case_studies_e2e.py  test_components_db.py  test_costing.py  test_cubic_eos.py  test_dac_power_units.py  test_flash.py  test_grand_challenge.py  test_hf_units.py  test_hx_audit.py  test_industrial_readiness.py  test_interface_evolution.py  test_objectives.py  test_opex_safeguard.py  test_phase7_ui.py  test_pressure_changer_audit.py  test_properties.py  test_property_package.py  test_reactor_audit.py  test_separator_audit.py  test_sizing_modes.py  test_slp_convergence.py  test_streamlit_smoke.py  test_technoeconomic_optimization.py  test_ui_assembly_logic.py  test_ui_new_pages.py  test_unit_categories.py  test_unrestricted_flowsheet.py  (+10 more)
(+24 files in other folders)
