[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pse_ecosystem"
version = "1.5.0.dev0"
description = "Application-centric Knowledge Ecosystem for Process Systems Engineering — general-purpose Aspen-style process simulator."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "PSE Ecosystem Team" },
]
license = { text = "Proprietary" }
keywords = ["process-systems-engineering", "hydrogen", "optimisation", "pyomo", "slp"]

dependencies = [
    "numpy>=1.24",
    "pyomo>=6.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
solvers = [
    # Optional pip-installable LP/MILP backends.
    # GLPK / CBC are typically installed via the system package manager;
    # listing pip names that wrap them where available.
    "highspy>=1.7",
]
weather = [
    "pvlib>=0.10",
    "pandas>=1.5",
]
gui = [
    "streamlit>=1.28",
    "plotly>=5.0",
    "openpyxl>=3.1",
]
blackbox = [
    # Required by the HDA black-box unit wrappers (ODE + VLE solvers).
    "scipy>=1.10",
]
all = [
    "pse_ecosystem[solvers,weather,gui,blackbox]",
]

[project.scripts]
pse-ecosystem = "pse_ecosystem.ui.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pse_ecosystem*"]

# v1.4.0 audit N28 — ship docs/ and data/ as package data so pip installs
# expose them to the Help Center loader and the EconomicEngine CEPCI
# loader. Without these entries the Help Center falls back to "doc
# missing" and the EconomicEngine quietly uses its hardcoded CEPCI
# defaults instead of data/economics.json.
[tool.setuptools.package-data]
"pse_ecosystem" = ["data/*.json"]

# Top-level data files (docs/) shipped via MANIFEST.in for sdist; for wheel
# we expose them via the data_files mechanism so pip installs preserve them
# alongside the package.
[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end solver tests (run with -m slow)",
]
